--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^15.6.1"
   },
   "devDependencies": {
+    "babel-plugin-transform-runtime": "^6.23.0",
     "conventional-changelog-cli": "^1.2.0",
     "eslint": "^3.14.1",
     "eslint-config-airbnb-base": "^11.2.0",
