--- a/package.json
+++ b/package.json
@@ -5,30 +5,33 @@
   "main": "lib/index",
   "scripts": {
     "lint": "eslint lib test",
-    "test": "mocha --require should --reporter spec --recursive --bail --check-leaks test/",
-    "cov": "istanbul cover _mocha -- --require should --recursive --bail --check-leaks test/ -R spec",
-    "travis": "istanbul cover _mocha --report lcovonly -- --require should --recursive --bail --check-leaks test/ -R spec",
-    "ci": "npm run lint && npm run test && npm run travis",
-    "changelog": "conventional-changelog -p angular -i CHANGELOG.md -o CHANGELOG.md -s"
+    "test": "mocha --require should --reporter spec --recursive --check-leaks test/",
+    "cov": "istanbul cover _mocha -- --require should --recursive --check-leaks test/ -R spec",
+    "travis": "istanbul cover _mocha --report lcovonly -- --require should --recursive --check-leaks test/ -R spec",
+    "ci": "npm run lint && npm run test && npm run travis"
   },
   "files": [
     "lib"
   ],
   "dependencies": {
-    "create-tag": "^0.2.0",
-    "react": "^15.6.1",
-    "react-dom": "^15.6.1",
-    "redux": "^3.7.1"
+    "create-tag": "^0.2.0"
   },
   "devDependencies": {
     "babel-plugin-transform-runtime": "^6.23.0",
     "conventional-changelog-cli": "^1.2.0",
-    "eslint": "^3.14.1",
-    "eslint-config-bce": "^2.0.1",
+    "eslint": "^4.9.0",
+    "eslint-config-bce": "^3.0.0",
     "istanbul": "^0.4.1",
-    "mocha": "^3.2.0",
-    "should": "^11.1.1",
-    "supertest": "^2.0.0"
+    "mocha": "^4.0.1",
+    "plover-arttemplate": "^3.4.0",
+    "plover-test-mate": "^3.0.0",
+    "should": "^13.1.2",
+    "supertest": "^3.0.0"
+  },
+  "peerDependencies": {
+    "react": ">=15.0.0 || ^16.0.0",
+    "react-dom": ">=15.0.0 || ^16.0.0",
+    "redux": "^3.7.2"
   },
   "plover": {
     "plugin": "lib/plugin.js"
