--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "lib"
   ],
   "dependencies": {
-    "create-tag": "^0.2.0"
+    "create-tag": "^0.2.0",
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0",
+    "redux": "^3.7.2"
   },
   "devDependencies": {
     "babel-plugin-transform-runtime": "^6.23.0",
@@ -25,13 +28,9 @@
     "mocha": "^4.0.1",
     "plover-arttemplate": "^3.4.0",
     "plover-test-mate": "^3.0.0",
+    "react-redux": "^5.0.6",
     "should": "^13.1.2",
     "supertest": "^3.0.0"
-  },
-  "peerDependencies": {
-    "react": ">=15.0.0 || ^16.0.0",
-    "react-dom": ">=15.0.0 || ^16.0.0",
-    "redux": "^3.7.2"
   },
   "plover": {
     "plugin": "lib/plugin.js"
